[package]
name = "lzsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0.37"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
pretty_assertions = "1"
rand = "0.8.5"
